# my-micrograd

./: pyproject.toml
notebooks/: 20240103_fc_development.ipynb
src/my_micrograd/: __init__.py  main.py
